# ExcaliburHash

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ExcaliburHashTest01.cpp  ExcaliburHashTest02.cpp  ExcaliburHashTest03.cpp  ExcaliburHashTest04.cpp  ExcaliburHashTest05.cpp  ExcaliburHashTest06.cpp  ExcaliburHashTest07.cpp  LICENSE  README.md  appveyor.yml  codecov19.cmd  codecov22.cmd  gen_vs19.cmd  gen_vs19_x86.cmd  gen_vs22.cmd
.cursor/rules/: ascii.mdc  coding_style.mdc  comment_style.mdc  power-shell.mdc
.github/workflows/: build.yml  ci.yml  coverage.yml
ExcaliburHash/: ExcaliburHash.h  ExcaliburKeyInfo.h  wyhash.h
